# womad-feedback

./: .gitignore  10-extract-images.ipynb  20-find-stars.ipynb  30-identify-session.ipynb  40-align.ipynb  45-align-template.ipynb  50-extract.ipynb  60-report.ipynb  combine.ipynb  extraction.ipynb  pyproject.toml  text-extract.ipynb
womad_feedback/: __main__.py  _deskew.py  align.py  average.py  extract.py  regions.py  textractor.py
womad_feedback/src_images/: __init__.py  regions.yaml
